<resources>
    <string name="app_name">Easy English</string>
    <string name="logo">Logo</string>
    <string name="imagegame">imageGame</string>
    <string name="forgetPassword">Forgot password?</string>
    <string name="easy_mode">Easy mode</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="use_biometry">Use biometry</string>
    <string name="want_exit">Are you sure you want to exit?</string>
    <string name="authentication_cancelled">Authentication cancelled</string>
    <string name="use_your_fingerprint">Use your FingerPrint</string>
    <string name="fingerprint_authentication_has_t_been_enabled_in_settings">Fingerprint authentication has`t been enabled in settings</string>
    <string name="fingerprint_permission_is_not_enabled">Fingerprint permission is not enabled</string>
    <string name="success">Success!</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_reset_password_for">Do you want to reset password for</string>
    <string name="some_problems_went">Some problems went</string>
    <string name="smth_went_wrong">Something went wrong, check the quality of the connection.</string>
    <string name="enter_the_password">Enter password</string>
    <string name="you_have_been_successfully_authorised">You have successfully authorized</string>
    <string name="failed_to_authorize">Failed to authorize</string>
    <string name="your_email_must_be_correct">Your email must be correct</string>
    <string name="enter_correct_email">Enter correct email</string>
    <string name="enter_email">Enter your email</string>
    <string name="authorization">Authorisation</string>
    <string name="login">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="registration">Registration</string>
    <string name="repeat_password">Repeat password</string>
    <string name="nickname">Nickname</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="password_must_be_6_symbols_at_least">Password must contain at least 6 characters</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="registered_successfully">Registered successfully</string>

    <string name="game1_description">In this game you have to explain what you see in the picture. After that, the second player will select an image from the list given to him based on the provided description.</string>
    <string name="game2_description">In this game you have to explain the presented word. After that, the second player will choose a word from the list given to him, based on the explanation of the first player.</string>
    <string name="game3_description">In this game you have to go through a quiz, in each back you will need to choose only one picture that matches the description.</string>
    <string name="game_description">Game description</string>
    <string name="who_what_is_it">Who/what is it</string>
    <string name="explain_the_word">Explain the word</string>
    <string name="explain_the_picture">Explain the picture</string>
    <string name="your_result">Your result:</string>
    <string name="main_menu">Main menu</string>
    <string name="play_again">Play again</string>
    <string name="answer_can_t_contain_a_question_word_or_be_blank">Answer can`t contain a question word or be blank</string>
    <string name="nice_waiting_to_the_next_player">Nice, waiting to the next player</string>
    <string name="the_player_did_not_understand_you">The player did not understand you</string>
    <string name="the_player_got_you">The player got you!</string>
    <string name="leave">Leave</string>
    <string name="loose_you_re_incorrect">Lose, you`re incorrect</string>
    <string name="success_you_re_right">Success, you`re right</string>
    <string name="close_prompt">Close prompt</string>
    <string name="prompt">Prompt</string>
    <string name="waiting_the_first_player">Waiting the first player</string>
    <string name="make_answer">Make answer</string>
    <string name="input_your_answer">Input your answer</string>
    <string name="you_can_t_leave_until_you_give_an_answer">You can\'t leave until you give an answer.</string>
    <string name="from_max">out of 20</string>
</resources>